modules/_grid.sass
@if $show_baseline == true
	body
		background:
			image: url(../img/grid.png)
			repeat: repeat
			size: 1px 1.5em

.container
	width: 100%
	max-width: $container_width
	margin: 0 auto
	padding: 3em

// .grid
// 	display: inline-block

// @for $i from 1 through $columns
// 	.\3#{$i} of#{$columns}
// 		width: ( $i / $columns ) * 100%

=split-left
	letter-spacing: $spacing_adjustment

	& > :nth-child(2n+1),
	& > :nth-child(2n)
		display: inline-block

		&:not(.grid-child)
			letter-spacing: 0

	& > :nth-child(2n+1)
		width: 38.196601125%

	& > :nth-child(2n)
		width: 61.803398875%

=split-right
	letter-spacing: $spacing_adjustment

	& > :nth-child(2n+1),
	& > :nth-child(2n)
		display: inline-block

		&:not(.grid-child)
			letter-spacing: 0

	& > :nth-child(2n+1)
		width: 61.803398875%

	& > :nth-child(2n)
		width: 38.196601125%

=grid($large_columns, $mid_columns, $small_columns)
	letter-spacing: $spacing_adjustment

	& > *
		display: inline-block
		width: percentage(1/$small_columns)

		&:not(.grid-child)
			letter-spacing: 0

		@media (min-width: $bp_medium)
			width: percentage(1/$mid_columns)

		@media (min-width: $bp_large)
			width: percentage(1/$large_columns)

